@@ -2,6 +2,8 @@
 =====
 - Handle a negative minimal volume correctly.
 - Fix a potential NULL pointer dereference.
+- Do not try to destroy the mixer window twice after a delete-event
+  (bug #8288).
 
 
 4.8.0
